# funcionario-api

./: .gitignore  pyproject.toml
src/api/: asgi.py  dependencies.py  main.py  password.py
src/api/controller/: employee.py  user.py
src/api/dto/: create_employee.py  create_user.py  show_employee.py  show_user.py  update_employee.py
src/api/model/: employee.py  user.py
src/api/repository/: database.py  employee.py  user.py
src/api/service/: employee.py  user.py
