[project]
name = "funcionario-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.133.1",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
indent-width = 4
line-length = 120
output-format = "grouped"

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
docstring-code-format = true
skip-magic-trailing-comma = false
preview = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.uv.workspace]
members = [
    "funcionario-api",
]
